--- a/authenticator.css
+++ b/authenticator.css
@@ -1,12 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 *{
-    padding: 0px;
-    margin: 0px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.wrapper{
-    width: 100%; 
-    height: 1000px; 
-    padding: 0px 20px; 
-    margin: 0px; 
-    background-color: whitesmoke;
-}
+  body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #5372F0;
+  }
+
+  ::selection{
+    color: #fff;
+    background: #5372F0;
+  }
+  .wrapper{
+    width: 380px;
+    padding: 40px 30px 50px 30px;
+    background: #fff;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.1);
+  }
+  .wrapper header{
+    font-size: 35px;
+    font-weight: 600;
+  }
+
+  #newConn, #existingConn{
+    height: 50px;
+    width: 280px;
+    border-radius: 5px;
+    font-size: 18px;
+    margin-top: 30px;
+    color: #fff;
+    padding: 0;
+    border: none;
+    background: #5372F0;
+    cursor: pointer;
+    border-bottom: 2px solid rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
+  }
+
+  #authenticating, #details{
+    height: 50px;
+    width: 280px;
+    color: green;
+    border-radius: 5px;
+    font-size: 12px;
+    margin: 0px auto 0px;
+  }
+
+  #details{
+    font-size: 18px;
+  }
